# ffbayes

./: .gitignore  ORGANIZATION_STRUCTURE.md  README.md  README_src.md  analysis_registry.yaml  bayesian-hierarchical-ff.py  environment.yml  get_ff_data.py  index.html  montecarlo-historical-ff.py  my_team_2022.tsv  package-lock.json  package.json  pymc3_env_requirements.txt  pyproject.toml  snake-draft-VOR.py  snake_draft_VOR.py
.agent-os/product/: README.md  decisions.md  roadmap.md  tech-stack.md
.github/workflows/: pages.yml
.history/: .gitignore_20220913192832  bayesian-ff_20220911130119.py  bayesian-ff_20220911134320.py  bayesian-ff_20220911134650.py  bayesian-ff_20220911140203.py  bayesian-ff_20220911140240.py  bayesian-ff_20220911140258.py  bayesian-ff_20220911140334.py  bayesian-ff_20220911140336.py  bayesian-ff_20220911140405.py  bayesian-ff_20220911140522.py  bayesian-ff_20220911140538.py  bayesian-ff_20220911140544.py  bayesian-ff_20220911140616.py  bayesian-ff_20220911140650.py  bayesian-ff_20220911140707.py  bayesian-ff_20220911140730.py  bayesian-ff_20220911140745.py  bayesian-ff_20220911140804.py  bayesian-ff_20220911140811.py  bayesian-ff_20220911140834.py  bayesian-ff_20220911140851.py  bayesian-ff_20220911140901.py  bayesian-ff_20220911140909.py  bayesian-ff_20220911141009.py  bayesian-ff_20220911141020.py  bayesian-ff_20220911141039.py  bayesian-ff_20220911141053.py  bayesian-ff_20220911141103.py  bayesian-ff_20220911141205.py  bayesian-ff_20220911141302.py  bayesian-ff_20220911141325.py  bayesian-ff_20220911141327.py  bayesian-ff_20220911141405.py  bayesian-ff_20220911141410.py  bayesian-ff_20220911141415.py  bayesian-ff_20220911141444.py  bayesian-ff_20220911141509.py  bayesian-ff_20220911141534.py  bayesian-ff_20220911141621.py  (+809 more)
archive/analysis/: BROKEN_bayesian_hierarchical_ff_unified.py  README.md
combined_datasets/: 2017-2021season.csv
config/: pipeline_config.json  pipeline_post_draft.json  pipeline_pre_draft.json  user_config.json
dashboard_frontend/: .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.ts
dashboard_frontend/scripts/: build_template.mjs
dashboard_frontend/src/: App.tsx  main.tsx  styles.css
dashboard_frontend/src/components/: AppShell.tsx  ErrorBoundary.test.tsx  ErrorBoundary.tsx  EvidencePanel.test.tsx  EvidencePanel.tsx  FinalizePanel.test.tsx  FinalizePanel.tsx  FreshnessPanel.tsx  PickStatus.test.tsx  PickStatus.tsx  PlayerBoard.test.tsx  PlayerBoard.tsx  PlayerInspector.test.tsx  PlayerInspector.tsx  ProvenanceBanner.tsx  QueueRosterPanel.tsx  RecommendationPanel.test.tsx  RecommendationPanel.tsx  SectionGate.test.tsx  SectionGate.tsx  SettingsPanel.test.tsx  SettingsPanel.tsx  freshnessShared.tsx
datasets/: 2017season.csv  2018season.csv  2019season.csv  2020season.csv  2021season.csv
docs/: DASHBOARD_FRONTEND_ARCHITECTURE.md  DASHBOARD_FRONTEND_CUTOVER.md  DASHBOARD_OPERATOR_GUIDE.md  DATA_LINEAGE_AND_PATHS.md  LAYPERSON_GUIDE.md  METRIC_REFERENCE.md  OUTPUT_EXAMPLES.md  PRE_POST_DRAFT_EXAMPLES.md  README.md  TECHNICAL_DEEP_DIVE.md
docs/existing_functionality/: bayesian_model_analysis.md  comprehensive_analysis_summary.md  data_collection_analysis.md  montecarlo_simulation_analysis.md  pipeline_orchestration_analysis.md  progress_monitoring_analysis.md
misc-datasets/: current_projections.csv  injuries_2020-08-11.csv
misc-datasets/nflgame-datasets/: nflgame_season2017.csv  nflgame_season2018.csv  nflgame_season2019.csv  nflgame_seasons_2017-2018-2019.csv
misc-datasets/snake-draft-datasets/: snake-draft_ppr-0.5_vor_2020.csv  snake-draft_ppr-0.5_vor_top-120_2020-realtime.csv  snake-draft_ppr-0.5_vor_top-120_2020.csv  snake-draft_ppr-0.5_vor_top-120_2022.csv  snake-draft_vor2020.csv
old code/: get_player_data.py  hello.py  main.R  webscraper-4.py
old code/test/: test.py  webscraper-2.py  webscraper-3.py  webscraper.py
openspec/: config.yaml
results/: 2022_projections_from_years[2017, 2018, 2019, 2020, 2021].csv
results/montecarlo_results/: 2022_projections_from_years[2017, 2018, 2019, 2020, 2021].tsv
scripts/: bayesian-hierarchical-ff-modern.py  bayesian-hierarchical-ff.py  get_ff_data.py  montecarlo-historical-ff.py  run_pipeline.py  snake_draft_VOR.py
scripts/analysis/: bayesian-hierarchical-ff-modern.py  bayesian-hierarchical-ff.py  montecarlo-historical-ff.py
scripts/data_pipeline/: 01_collect_data.py  02_validate_data.py  03_preprocess_analysis_data.py  __init__.py  get_ff_data_improved.py
scripts/utils/: progress_monitor.py  quick_bayesian_test.py  quick_data_validation.py  quick_recent_data_collection.py
site/: dashboard_payload.json  index.html  publish_provenance.json
src/ffbayes/: cli.py  publish_artifacts.py  publish_pages.py  refresh_dashboard.py  run_pipeline.py  run_pipeline_split.py  stage_dashboard.py
tests/: conftest.py  dashboard_smoke.mjs  test_advanced_stats_calculator.py  test_bayesian_player_model.py  test_bayesian_quick.py  test_bayesian_team_aggregation.py  test_bayesian_vor_comparison.py  test_cli.py  test_collect_data_paths.py  test_collect_data_processing.py  test_consolidated_data_collection.py  test_create_unified_dataset_pipeline.py  test_dashboard_payload_schema.py  test_dashboard_smoke.py  test_data_collection.py  test_directory_management.py  test_documentation_contracts.py  test_draft_decision_backtest.py  test_draft_decision_strategy.py  test_draft_decision_system.py  test_draft_retrospective.py  test_draft_strategy.py  test_draft_strategy_comparison.py  test_draft_strategy_historical.py  test_draft_strategy_package.py  test_enhanced_data_validation.py  test_frontend_renderer.py  test_hybrid_mc_bayesian.py  test_interface_standards.py  test_model_comparison_framework.py  test_monte_carlo_simulation.py  test_nflverse_backend.py  test_path_constants.py  test_pipeline_diagnostics.py  test_pipeline_execution_fixes.py  test_pipeline_orchestration.py  test_player_forecast_stress_fixture.py  test_preprocess_analysis_data.py  test_publish_artifacts.py  test_publish_pages.py  (+14 more)
tests/fixtures/: dashboard_payload_minimal.json
(+171 files in other folders)
