[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ffbayes"
version = "0.1.0"
description = "Unified Fantasy Football Analytics Pipeline"
requires-python = ">=3.10"
authors = [{ name = "FFBayes" }]
readme = "README.md"
keywords = ["fantasy-football", "bayesian", "monte-carlo", "pymc", "pipeline"]
license = { text = "MIT" }

[project.optional-dependencies]
dev = ["pytest>=7", "ruff>=0.5", "mypy>=1.5"]

[project.scripts]
ffbayes-pipeline = "ffbayes.run_pipeline:main"
ffbayes-collect = "ffbayes.data_pipeline.collect_data:main"
ffbayes-validate = "ffbayes.data_pipeline.validate_data:main"
ffbayes-preprocess = "ffbayes.data_pipeline.preprocess_analysis_data:main"
ffbayes-mc = "ffbayes.analysis.montecarlo_historical_ff:main"
ffbayes-bayes = "ffbayes.analysis.bayesian_hierarchical_ff_modern:main"
ffbayes-agg = "ffbayes.analysis.bayesian_team_aggregation:main"
ffbayes-compare = "ffbayes.analysis.model_comparison_framework:main"
ffbayes-viz = "ffbayes.analysis.create_team_aggregation_visualizations:main"
ffbayes-draft-strategy = "ffbayes.draft_strategy.bayesian_draft_strategy:main"

[tool.ruff.lint]
select = [
  "E",  # pycodestyle
  "F",  # pyflakes
  "I",  # isort
]
ignore = [
  "F841",  # no unused variable
  "E501",  # line length handled by formatter
]

[tool.ruff.format]
quote-style = "single"
indent-style = "space"
skip-magic-trailing-comma = true

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
include = ["ffbayes*"]
