[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ffbayes"
version = "0.1.0"
description = "Unified Fantasy Football Analytics Pipeline"
requires-python = ">=3.10"
authors = [{ name = "Nicholas Camarda" }]
readme = "README.md"
keywords = ["fantasy-football", "bayesian", "monte-carlo", "pymc", "pipeline"]
license = { text = "MIT" }
dependencies = [
  "alive-progress>=3.0",
  "beautifulsoup4>=4.12",
  "fuzzywuzzy>=0.18",
  "kaleido>=0.2",
  "matplotlib>=3.5",
  "nfl-data-py>=0.2",
  "numpy>=1.20",
  "openpyxl>=3.1",
  "pandas>=1.5",
  "plotly>=5.0",
  "psutil>=5.9",
  "pymc>=5.0",
  "python-Levenshtein>=0.12",
  "requests>=2.31",
  "scikit-learn>=1.0",
  "scipy>=1.9",
  "seaborn>=0.13",
]

[project.optional-dependencies]
dev = ["pytest>=7", "ruff>=0.5", "mypy>=1.5"]

[project.scripts]
ffbayes-pipeline = "ffbayes.run_pipeline:main"
ffbayes-collect = "ffbayes.data_pipeline.collect_data:main"
ffbayes-validate = "ffbayes.data_pipeline.validate_data:main"
ffbayes-preprocess = "ffbayes.data_pipeline.preprocess_analysis_data:main"
ffbayes-mc = "ffbayes.analysis.montecarlo_historical_ff:main"
# Use the current hybrid MC + Bayesian implementation for core Bayesian analysis
ffbayes-bayes = "ffbayes.analysis.hybrid_mc_bayesian:main"
ffbayes-agg = "ffbayes.analysis.bayesian_team_aggregation:main"
ffbayes-compare = "ffbayes.analysis.model_comparison_framework:main"
# Correct module path for team aggregation visualizations
ffbayes-viz = "ffbayes.visualization.create_team_aggregation_visualizations:main"
ffbayes-draft-strategy = "ffbayes.draft_strategy.bayesian_draft_strategy:main"
ffbayes-compare-strategies = "ffbayes.analysis.draft_strategy_comparison:main"
ffbayes-bayesian-vor = "ffbayes.analysis.bayesian_vor_comparison:main"

[tool.ruff.lint]
select = [
  "E",  # pycodestyle
  "F",  # pyflakes
  "I",  # isort
]
ignore = [
  "F841",  # no unused variable
  "E501",  # line length handled by formatter
]

[tool.ruff.format]
quote-style = "single"
indent-style = "space"
skip-magic-trailing-comma = true

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
include = ["ffbayes*"]
