[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ffbayes"
version = "0.1.0"
description = "Unified Fantasy Football Analytics Pipeline"
requires-python = ">=3.10"
authors = [{ name = "Nicholas Camarda" }]
readme = "README.md"
keywords = ["fantasy-football", "bayesian", "monte-carlo", "pymc", "pipeline"]
license = { text = "MIT" }
dependencies = [
  "alive-progress>=3.0",
  "beautifulsoup4>=4.12",
  "fuzzywuzzy>=0.18",
  "kaleido>=0.2",
  "matplotlib>=3.5",
  "nflreadpy>=0.1.5",
  "numpy>=1.20",
  "openpyxl>=3.1",
  "pandas>=1.5",
  "polars>=1.0",
  "plotly>=5.0",
  "psutil>=5.9",
  "pymc>=5.0",
  "python-Levenshtein>=0.12",
  "requests>=2.31",
  "scikit-learn>=1.0",
  "scipy>=1.9",
  "seaborn>=0.13",
]

[project.optional-dependencies]
dev = ["pytest>=7", "ruff>=0.5", "mypy>=1.5"]

[project.scripts]
ffbayes = "ffbayes.cli:main"
ffbayes-cli = "ffbayes.cli:main"
ffbayes-pipeline = "ffbayes.run_pipeline:main"
ffbayes-collect = "ffbayes.data_pipeline.collect_data:main"
ffbayes-validate = "ffbayes.data_pipeline.validate_data:main"
ffbayes-preprocess = "ffbayes.data_pipeline.preprocess_analysis_data:main"
ffbayes-mc = "ffbayes.analysis.montecarlo_historical_ff:main"
# Use the current hybrid MC + Bayesian implementation for core Bayesian analysis
ffbayes-bayes = "ffbayes.analysis.hybrid_mc_bayesian:main"
ffbayes-agg = "ffbayes.analysis.bayesian_team_aggregation:main"
ffbayes-compare = "ffbayes.analysis.model_comparison_framework:main"
ffbayes-draft-strategy = "ffbayes.draft_strategy.draft_decision_strategy:main"
ffbayes-draft-backtest = "ffbayes.analysis.draft_decision_backtest:main"
ffbayes-draft-retrospective = "ffbayes.analysis.draft_retrospective:main"
ffbayes-publish = "ffbayes.publish_artifacts:main"
ffbayes-publish-pages = "ffbayes.publish_pages:main"
ffbayes-refresh-dashboard = "ffbayes.refresh_dashboard:main"
ffbayes-bayesian-vor = "ffbayes.analysis.bayesian_vor_comparison:main"

[tool.ruff.lint]
select = [
  "E",  # pycodestyle
  "F",  # pyflakes
  "I",  # isort
]
ignore = [
  "F841",  # no unused variable
  "E501",  # line length handled by formatter
]

[tool.ruff]
extend-exclude = ["archive"]

[tool.ruff.format]
quote-style = "single"
indent-style = "space"
skip-magic-trailing-comma = true

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
no_implicit_optional = false
check_untyped_defs = false
warn_unused_ignores = true
disable_error_code = [
  "import-untyped",
]
exclude = [
  "^archive/",
]

[[tool.mypy.overrides]]
module = [
  "ffbayes.run_pipeline_split",
  "ffbayes.visualization.validation_plots.*",
  "ffbayes.utils.name_resolver",
  "ffbayes.utils.enhanced_pipeline_orchestrator",
  "ffbayes.draft_strategy.traditional_vor_draft",
  "ffbayes.utils.error_handling",
  "ffbayes.draft_strategy.risk_adjusted_rankings",
  "ffbayes.utils.validation_metrics",
  "ffbayes.draft_strategy.bayesian_draft_strategy",
  "ffbayes.analysis.build_team_aggregation_results",
  "ffbayes.analysis.bayesian_team_aggregation",
  "ffbayes.data_pipeline.create_unified_dataset",
  "ffbayes.analysis.model_comparison_framework",
  "ffbayes.analysis.bayesian_vor_comparison",
  "ffbayes.utils.model_validation",
  "ffbayes.utils.script_interface",
  "ffbayes.analysis.montecarlo_historical_ff",
]
ignore_errors = true

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
include = ["ffbayes*"]
